Fix: chart spacing issue on mobile

--- a/src/styles/components/_chart.scss
+++ b/src/styles/components/_chart.scss
@@ -1,7 +1,7 @@
 
 .chart__container {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -14,15 +14,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  @media (min-width: 600px) {
-    min-width: 50%;
-  }
+  // @media (min-width: 600px) {
+  //   height: 100%;
+  // }
 }
 
 .chart__chart-container {
+  // background-color: pink;
   width: 100%;
-  height: 100%;
+  height: 55%;
   display: flex;
   align-items: center;
   justify-content: center;
+  @media (min-width: 440px) {
+    height: 60%;
+  }
+  @media (min-width: 550px) {
+    height: 100%;
+  }
 }
